<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.scenes.simulator.PhyterSimulatorActivity">

  <android.support.v7.widget.Toolbar
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.Toolbar"
      android:id="@+id/toolbar"
      app:title="@string/simulator_toolbar_title"
      app:navigationIcon="@drawable/ic_arrow_back_24dp"
      app:navigationContentDescription="Back"
      app:titleTextAppearance="@style/AppTheme.TextAppearance.Avenir.Large"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
  />
  <TextView
      android:text="@string/name_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/nameLabel"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Large"
      android:layout_marginTop="32dp"
      app:layout_constraintTop_toBottomOf="@+id/toolbar"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="123dp"
      android:layout_marginEnd="123dp"
      app:layout_constraintEnd_toEndOf="parent"
      android:textColor="@android:color/white"/>
  <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:ems="10"
      android:id="@+id/nameField"
      android:layout_marginEnd="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/nameLabel"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Medium"
      android:textColor="@android:color/white"
      tools:text="@string/placeholder"
      android:contentDescription="@string/cd_inst_name"/>
  <TextView
      android:text="@string/address_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/addressLabel"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Large"
      android:textColor="@android:color/white"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/nameField"/>
  <EditText
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:inputType="textPersonName"
      android:ems="10"
      android:id="@+id/addressField"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="16dp"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Medium"
      android:textColor="@android:color/white"
      tools:text="@string/placeholder"
      android:contentDescription="@string/instrument_name"
      app:layout_constraintTop_toBottomOf="@+id/addressLabel"
      android:layout_marginTop="8dp"/>
  <Button
      android:text="@string/randomize"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/randomizeButton"
      android:layout_marginStart="8dp"
      app:layout_constraintStart_toEndOf="@+id/addressField"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.466"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/addressLabel"
  />
  <Button
      android:text="@string/start"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/startButton"
      android:layout_marginTop="24dp"
      app:layout_constraintTop_toBottomOf="@+id/addressField"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      app:layout_constraintEnd_toEndOf="parent"
  />
</android.support.constraint.ConstraintLayout>