<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:focusableInTouchMode="true"
    tools:context=".app.scenes.measure.MeasureActivity"
    >

  <android.support.v7.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.Toolbar"
      app:title="@string/title_measure"
      app:titleTextAppearance="@style/AppTheme.TextAppearance.Avenir.Large"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/deviceNameText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/placeholder"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Large"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@id/toolbar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:textColor="@android:color/white"/>
  <TextView
      android:text="@string/salinity_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/salinityLabel"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Medium"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toBottomOf="@+id/deviceNameText"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:textColor="@android:color/white"/>
  <TextView
      android:text="@string/history_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/historyLabel"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Medium"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/actionButton"
      android:layout_marginTop="8dp"
      android:textColor="@android:color/white"/>
  <EditText
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:ems="10"
      android:id="@+id/salinityField"
      app:layout_constraintTop_toBottomOf="@+id/salinityLabel"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:textAppearance="@style/AppTheme.TextAppearance.Avenir.Medium"
      android:textColor="@android:color/white"
      android:contentDescription="@string/cd_salinity_value"
      android:text="@string/_35_0"
      android:textAlignment="center"/>
  <Button
      android:text="@string/btn_measure_background"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/actionButton"
      app:layout_constraintTop_toBottomOf="@+id/salinityField"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
  />
  <android.support.v7.widget.RecyclerView
      android:layout_width="368dp"
      android:layout_height="221dp"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/historyLabel"
      android:layout_marginEnd="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      android:id="@+id/historyRecycler"/>


</android.support.constraint.ConstraintLayout>